# netusb_camera_driver

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: NetUSBCamera.cfg
include/netusb_camera_driver/: netusb_defs.h  netusb_utils.hpp
launch/: generic.launch
plugins/: nodelet_plugins.xml
src/: netusb_node.cpp  netusb_nodelet.cpp  netusb_utils.cpp
